prevented screenshot from jumping around on load. need to remove importants.

--- a/themes/deadhand/assets/scss/04-components/_pill.scss
+++ b/themes/deadhand/assets/scss/04-components/_pill.scss
@@ -3,11 +3,14 @@
 	font-size: 14px;
 	padding: 2px 8px;
 	display: inline-block;
-	margin-bottom: 12px;
+	margin-bottom: .5em;
 	margin-right: 3px;
 	color: #fff;
 	background-color: desaturate($color__purple, 10%);
 	font-weight: 600;
+	@media (max-width: $breakpoint__sm) {
+		font-size: 12px;
+	}
 	&__wrapper {
 		list-style-type: none;
 		padding: 0;
