--- a/themes/deadhand/assets/scss/06-pages/_page-portfolio.scss
+++ b/themes/deadhand/assets/scss/06-pages/_page-portfolio.scss
@@ -1,7 +1,14 @@
 .page-portfolio__screenshot {
+	position: absolute !important;
+	transform: none;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
 	margin: 0 !important;
 	max-width: 100% !important;
 	&-wrapper {
-		padding-bottom: 20px;
+		margin-bottom: 26px;
+		position: relative;
 	}
 }
